err/ocstyle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ocstyle'...
Compiling './lib/python3.5/site-packages/ocstyle/main.py'...
***   File "./lib/python3.5/site-packages/ocstyle/main.py", line 54
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ocstyle/main_test.py'...
***   File "./lib/python3.5/site-packages/ocstyle/main_test.py", line 69
    print filename # OK to print in a test. # pylint: disable=W9914
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ocstyle/testdata'...
Listing './lib/python3.5/site-packages/ocstyle-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/parcon'...
Compiling './lib/python3.5/site-packages/parcon/__init__.py'...
***   File "./lib/python3.5/site-packages/parcon/__init__.py", line 409
    position, e = max(expected, key=lambda (position, _): position)
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parcon/pargen'...
Listing './lib/python3.5/site-packages/parcon/pargon'...
Listing './lib/python3.5/site-packages/parcon/railroad'...
Compiling './lib/python3.5/site-packages/parcon/railroad/raildraw.py'...
***   File "./lib/python3.5/site-packages/parcon/railroad/raildraw.py", line 285
    max_width = max(sizes, key=lambda (w, h, l): w)[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parcon/railroad/regex.py'...
***   File "./lib/python3.5/site-packages/parcon/railroad/regex.py", line 46
    lambda (a, b): rr.Or(*[rr.Token(rr.TEXT, chr(c)) for c in range(ord(a), ord(b)+1)])]
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parcon/testframework.py'...
***   File "./lib/python3.5/site-packages/parcon/testframework.py", line 58
    print "WARNING: missing tests for " + str(list(targets - self.targets))
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/parcon/tests.py'...
***   File "./lib/python3.5/site-packages/parcon/tests.py", line 53
    print "-" * 75
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/parcon-0.1.25.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
